--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,12 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.0.2)
 project(ground_filter)
 
 find_package(catkin REQUIRED COMPONENTS
   roscpp
-  std_msgs
   pcl_ros
 )
 
-catkin_package(
-  CATKIN_DEPENDS sensor_msgs
-)
+catkin_package()
 
 ###########
 ## Build ##
@@ -19,10 +16,6 @@ include_directories(
   ${catkin_INCLUDE_DIRS}
 )
 
-SET(CMAKE_CXX_FLAGS "-std=c++11 -O2 -g -Wall ${CMAKE_CXX_FLAGS}")
-
-link_directories(${PCL_LIBRARY_DIRS})
-
-#Ground Filter
-add_executable(ground_filter src/ground_filter.cpp)
-target_link_libraries(ground_filter ${catkin_LIBRARIES} ${PCL_LIBRARIES})
+# Ground Filter
+add_executable(${PROJECT_NAME} src/ground_filter.cpp)
+target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES})
