--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(ground_filter)
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   pcl_ros
+  rostest
 )
 
 catkin_package()
@@ -19,3 +20,11 @@ include_directories(
 # Ground Filter
 add_executable(${PROJECT_NAME} src/ground_filter.cpp)
 target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES})
+
+##########
+## Test ##
+##########
+
+if(CATKIN_ENABLE_TESTING)
+  add_rostest(test/ground_filter_launch.test)
+endif()
