add: build and run test on remote

--- a/.github/workflows/melodic.yml
+++ b/.github/workflows/melodic.yml
@@ -1,4 +1,4 @@
-name: ROS melodic build workflow
+name: ROS melodic build and run test
 
 on: push
 
@@ -23,7 +23,7 @@ jobs:
         source /opt/ros/melodic/setup.bash
         mkdir -p ${CATKIN_WS}/src
         ln -s ${GITHUB_WORKSPACE} ${CATKIN_WS}/src/
-
+        
     - name: pre build
       run: |
         source /opt/ros/melodic/setup.bash
@@ -31,9 +31,14 @@ jobs:
         git submodule update --init --recursive
         rosdep update
         rosdep install -i -y --from-paths ./
-
-    - name: build
+      
+    - name: Build test
       run: |
         source /opt/ros/melodic/setup.bash
         cd ${CATKIN_WS}
         catkin build
+    
+    - name: Run test
+      run: |
+        source ${CATKIN_WS}/devel/setup.bash
+        bash -xv ./test/test.bash
