--- a/.github/workflows/noetic.yml
+++ b/.github/workflows/noetic.yml
@@ -1,4 +1,4 @@
-name: ROS noetic build workflow
+name: ROS noetic build test
 
 on: push
 
@@ -31,8 +31,8 @@ jobs:
         git submodule update --init --recursive
         rosdep update
         rosdep install -i -y --from-paths ./
-
-    - name: build
+        
+    - name: Build test
       run: |
         source /opt/ros/noetic/setup.bash
         cd ${CATKIN_WS}
