add: noetic run test

--- a/.github/workflows/melodic.yml
+++ b/.github/workflows/melodic.yml
@@ -41,4 +41,4 @@ jobs:
     - name: Run test
       run: |
         source ${CATKIN_WS}/devel/setup.bash
-        bash -xv ./test/test.bash
+        bash -xv ./test/test_melodic.bash
