--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,19 +4,17 @@ project(ground_filter)
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   pcl_ros
-  rostest
 )
 
 catkin_package()
 
-###########
-## Build ##
-###########
-
 include_directories(
+  include
   ${catkin_INCLUDE_DIRS}
 )
 
 # Ground Filter
-add_executable(${PROJECT_NAME} src/ground_filter.cpp)
-target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES})
+add_executable(ground_filter_node src/ground_filter_node.cpp)
+target_link_libraries(ground_filter_node 
+  ${catkin_LIBRARIES}
+)
